add to swag prices
